--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: false
 contact_links:
   - name: 🛡️ Security Vulnerability
-    url: mailto:security@visualogin.app
+    url: mailto:visualogin@proton.me
     about: Please report security issues responsibly via email
   - name: 💬 Community Discussions
     url: https://github.com/VisuaLogin/core/discussions
